紅利桃子 - 活動頁更新
新增台北富邦logo與影片

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -143,7 +143,9 @@
                 <section class="content">
                     <div class="main-title clearfix">
                         <div class="i-a">
-                            <img src="images/main-banner-0704.jpg" title="桃園市民卡－1點 = 1元 千萬紅利桃子加倍贈" width="100%">
+                            <a href="https://lihi3.com/BYXkv" target="_blank">
+                                <img src="images/main-banner-0704.jpg" title="桃園市民卡－1點 = 1元 千萬紅利桃子加倍贈" width="100%">
+                            </a>
                         </div>
                     </div>
                 </section>
@@ -175,6 +177,7 @@
                         </div>
                     </div>
                     
+
                     <div class="card" id="goThe03">
                         <h3 class="sub-title">
                             <span class="bg-pink">全民攻略 - 紅利桃子是什麼？</span>
@@ -207,6 +210,19 @@
                                         </a>
                                     </li>
                                 </ul>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="card">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">桃園市民卡紅利桃子</span>
+                        </h3>
+                        <div class="info">
+                            <div class="video-box">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/lm76mMPyPeE" title="YouTube video player"
+                                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                             </div>
                         </div>
                     </div>
@@ -356,6 +372,11 @@
                                     <li>
                                         <a href="https://www.firstbank.com.tw/sites/fcb/Personalhome" target="_blank">
                                             <img src="images/Logo-firstbank.png" alt="第一銀行">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.fubon.com/banking/Personal/index.htm" target="_blank" style="padding-top:5px ;">
+                                            <img style="max-width:200px;" src="images/Logo-taipeifubon.png" alt="台北富邦銀行">
                                         </a>
                                     </li>
                                 </ul>
