紅利桃子 - 新增BN與更新圖文

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -271,6 +271,11 @@
                                     <img src="images/img-event-05.png" alt="經發局 - 音樂 微醺 最高可獲300點">
                                 </a>
                             </li>
+                            <li>
+                                <a class="tycg-photo" href="https://w3.ncet.com.tw/a2/Ty-airarea/news-page/19" target="_blank">
+                                    <img src="images/img-event-06.png" alt="經發局 - 綠色情人節 桃園騎趣 攜愛前行 贈紅利桃子 100點">
+                                </a>
+                            </li>
                         </ul>
                         <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
                         ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。</p>
@@ -287,8 +292,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="tycg-photo" href=" https://open.tycard.app/fubon/20220801" target="_blank">
+                                <a class="tycg-photo" href="https://open.tycard.app/fubon/20220801" target="_blank">
                                     <img src="images/other_event_02.png" alt="台北富邦銀行">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://a18.taoyuanq.com/index.html?openExternalBrowser=1" target="_blank">
+                                    <img src="images/other_event_03.png" alt="國泰人壽">
                                 </a>
                             </li>
                             <!-- <li>
