紅利桃子 - 新增說明

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -278,7 +278,8 @@
                             </li>
                         </ul>
                         <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
-                        ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。</p>
+                        ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。<br>
+                        ※ 當月結束之活動，點數領取期限為次月月底，請得獎者務必於領取期限前登入紅利桃子、完成點數領取，以免喪失個人權益。</p>
                     </div>
 
                     <div class="card">
