--- a/jetfi_wifi_jp/europe.html
+++ b/jetfi_wifi_jp/europe.html
@@ -58,7 +58,7 @@
 						</div>
 						<p style="font-size: 15px; font-weight: 500;">ヨーロッパエリア内なら1か国でも複数国でも、同一料金でご利用いただけるプランです。ヨーロッパ内で複数国移動する場合に便利！</p>
 						<p class="btn" style="padding: 20px;">
-							<a href="asia_01.html" style="background-color: #FFC924; color: #222; font-weight: 600; font-size: 18px; text-align: center; display: block; border-radius: 50px; padding:16px 10px; box-shadow: 3px 3px 0 #808080;">“ヨーロッパ周遊”プランの申し込みはこちら</a>
+							<a href="asia_01.html" style="background-color: #f6d328; color: #222; font-weight: 600; font-size: 18px; text-align: center; display: block; border-radius: 50px; padding:16px 10px; box-shadow: 3px 3px 0 #808080;">“ヨーロッパ周遊”プランの申し込みはこちら</a>
 						</p>
 						<div class="show_more_info">
 							<h4>対応国一覧</h4>
@@ -259,24 +259,20 @@
 			</section>
 		</main>
 		<!--footer-->
-		<footer>
+		<footer class="common-footer">
 			<div class="inner">
-			    <div id="ftr_2019">
-			      	<p class="contact_info_title">お問い合わせ</p>
-			        <div class="contact_info_inner">
-				        <section class="accdn_sp">
-					        <h3 class="title">jetfiサポートセンター</h3>
-					        <div class="right">
-					            <p class="tel" data-action="call" data-tel="0570-017-711">0570-017-711</p>
-					            <a class="mail pc" href="mailto:helpjetfi@mayass.com">helpjetfi@mayass.com</a>
-					            <p class="tokou"><span>渡航先</span>からのお問い合わせ</p>  
-					            <p class="tokou-tel" data-action="call" data-tel="+81-3-6625-4515">+81-3-6625-4515</p>
-					            <p class="cap">受付時間:9:30〜18:30（年中無休）<br>※通信不具合のお問い合わせは24時間受け付けております。</p>
-					            <a class="mail sp" href="mailto:helpjetfi@mayass.com">helpjetfi@mayass.com</a>
-					        </div>
-				        </section>
-			   		</div>
-				</div>
+			    <div id="footer-contact">
+			      <div class="footer-contact-container">
+			        <div class="footer-contact-box">
+			          <p><strong>ご不明点がございましたら、<br class="sp">こちらからお問い合わせください。</strong></p>
+			          <img src="images/operator.png" alt="サポートセンター オペレーター" class="footer-contact-operator-sp sp">
+			        </div>
+			        <div class="app-button-box mgt30">
+			          <a class="app-button" href="/wifi/contact/">お問い合わせ</a>
+			        </div>
+			      </div>
+			      <img src="images/operator.png" alt="サポートセンター オペレーター" class="footer-contact-operator-pc pc">
+			    </div>
 		  	</div>
 			<div class="copyright-area">
 			  	<a href="https://www.jetfi.jp/wifi/">高速&大容量の格安海外WiFiレンタルは【jetfi】</a>
