紅利桃子 - 更新活動BN(第一銀行)

--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -288,8 +288,8 @@
                         </h3>
                         <ul class="tycg-card clearfix">
                             <li>
-                                <a class="tycg-photo" href="https://card.firstbank.com.tw/sites/Satellite?c=CreditCard&cid=1565695121095&d=Touch&pagename=FirstBankCard%2FCreditCard%2Fzh%2FCardActivityDetailView" target="_blank">
-                                    <img src="images/other_event_01.png" alt="第一銀行">
+                                <a class="tycg-photo" href="https://card.firstbank.com.tw/sites/Satellite?c=CreditCard&cid=1565695448783&d=Touch&pagename=FirstBankCard%2FCreditCard%2Fzh%2FCardActivityDetailView" target="_blank">
+                                    <img src="images/other_event_01_new.png" alt="第一銀行">
                                 </a>
                             </li>
                             <li>
