紅利桃子 - 首頁"活動辦法"另外獨立為一頁

--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>紅利桃子 | 業者專區 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
+    <title>紅利桃子 | 活動辦法 － 商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底</title>
     <meta name='description'content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta name='keywords' content="數位桃園, 數位振興, 商家振興, 市民卡, 紅利桃子, 桃園市民, TTPUSH, 點數特約商店" />
     <meta property="og:image" content="https://point.tycg.gov.tw/images/share-pic-0704.jpg" />
-    <meta property="og:title" content="紅利桃子－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
+    <meta property="og:title" content="紅利桃子 | 活動辦法－商家振興、民眾有感！千萬紅利桃子加倍贈，振興活動一波波持續到年底" />
     <meta property="og:url" content="https://point.tycg.gov.tw" />
     <meta property="og:description" content="桃園市政府資科局全新打造、預計於年底上線的「市民卡紅利桃子」，運用點數發放模式，達到市政宣導、民眾有感、商家振興的目標。為加強振興力道將於7月15日提早搶先推出，結合各局處活動送出千萬元台幣等值的巨額點數，民眾獲點後可以直接到桃園在地特約商家折抵消費（1元=1點），增加生活小確幸；而商家可將獲得的點數變現，提升實質收益。" />
     <meta property="og:type" content="website" />
@@ -99,16 +99,16 @@
             <nav class="nav-menu">
                 <ul>
                     <li class="dropdown">
-                        <a class="title">業者專區</a>
+                        <a class="title">活動辦法</a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="business.html#link01">簡單三步驟</a>
+                                <a href="campaign.html#link01">資科局加碼活動</a>
                             </li>
                             <li>
-                                <a href="business.html#link02">如何加入、申請</a>
+                                <a href="campaign.html#link02">各局處活動辦法</a>
                             </li>
                             <li>
-                                <a href="https://lihi3.com/psG7v" target="_blank">申請加入特約商家</a>
+                                <a href="campaign.html#link03">合作活動</a>
                             </li>
                         </ul>
                     </li>
@@ -127,48 +127,87 @@
                         </div>
                     </div>
                 </section>
-                <section class="event-content" id="goThe01">
-                    <div class="info" style="padding-bottom: 40px;">
-                        <div class="slider-banner">
-                            <a href="https://lihi3.com/psG7v"
-                                target="_blank">
-                                <img width="100%" src="images/btn-join-business-0706.png" alt="加入「點數特約商家」 （立即點我申請加入）">
+                <section class="event-content">
+                    <div class="card" id="link01">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">資科局加碼活動</span>
+                        </h3>
+                        <div>
+                            <a class="a-an" href="https://lihi3.com/BYXkv" target="_blank">
+                                <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
+                                <img class="mob-show" src="images/img-event-hot-mob.jpg" width="100%" alt="紅利桃子 - 加碼活動">
                             </a>
                         </div>
                     </div>
-
-                    <div class="card" id="link01">
-                         <div class="main-introductio">
-                            <h3 class="sub-title">
-                                <span class="bg-pink">點數特約店家、簡單三步驟</span>
-                            </h3>
-                            <div>
-                                <img src="images/0722/img-join-business-00.jpg" width="100%" alt="點數特約店家、簡單三步驟">
-                            </div>
-                        </div>
-                    </div>
-
+                    
                     <div class="card" id="link02">
-                        <div class="main-introductio">
-                            <h3 class="sub-title">
-                                <span class="bg-pink">如何加入、申請成為點數特約店家？</span>
-                            </h3>
-                            <div>
-                                <img src="images/0630/img-join-business-01.jpg" width="100%" alt="如何申請成為點數特約店家？使用手機電話註冊">
-                            </div>
-                            <div>
-                                <img src="images/img-join-business-01-1.jpg" width="100%" alt="如何申請成為點數特約店家？使用LINE連動註冊">
-                            </div>
-                            <div style="padding-top:10px;">
-                                <img src="images/0707/img-join-business-02.jpg" width="100%" alt="如何申請成為點數特約店家？">
-                            </div>
-                            <div style="padding-top:10px;">
-                                <img src="images/0629/img-join-business-03.jpg" width="100%" alt="如何申請成為點數特約店家 - 省核通過後">
-                            </div>
-                            <div style="padding-top:10px;">
-                                <img src="images/0812/img-join-business-04.jpg" width="100%" alt="店家客服資訊">
-                            </div>
-                        </div>
+                        <h3 class="sub-title">
+                            <span class="bg-pink">桃園市各局處活動辦法</span>
+                        </h3>
+                        <ul class="tycg-card clearfix">
+                            <li>
+                                <a class="tycg-photo" href="https://lovetystay.tycg.gov.tw/" target="_blank">
+                                    <img src="images/img-event-01-0722.png" alt="觀旅局 - 旅宿千元住宿金 加碼1000點">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo"
+                                    href="https://agriculture.tycg.gov.tw/home.jsp?id=255&parentpath=0,103&mcustomize=multimessage_view.jsp&dataserno=202206270024&aplistdn=ou=hotnews,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y"
+                                    target="_blank">
+                                    <img src="images/img-event-02-0701.png" alt="農業局 - 防疫有機蔬菜箱 加碼30點">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://2022lovetyn.tw/" target="_blank">
+                                    <img src="images/img-event-03-0714.png" alt="經發局 - 週週抽吃飯金 加碼300點">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo"
+                                    href="https://www.facebook.com/100064626644757/posts/pfbid02qRyiQU3aRUbGu68mA9r6GwiprwEHpZpuSxJ7P1Ez81ZroDhM5WYDAbVwySusoFfql/?d=n"
+                                    target="_blank">
+                                    <img src="images/img-event-04.png" alt="經發局 - 逛夜市送100點">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://www.2022taoyuanfood.com.tw/" target="_blank">
+                                    <img src="images/img-event-05.png" alt="經發局 - 音樂 微醺 最高可獲300點">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://w3.ncet.com.tw/a2/Ty-airarea/news-page/19" target="_blank">
+                                    <img src="images/img-event-06.png" alt="經發局 - 綠色情人節 桃園騎趣 攜愛前行 贈紅利桃子 100點">
+                                </a>
+                            </li>
+                        </ul>
+                        <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
+                            ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。<br>
+                            ※ 當月結束之活動，點數領取期限為次月月底，請得獎者務必於領取期限前登入紅利桃子、完成點數領取，以免喪失個人權益。</p>
+                    </div>
+                    
+                    <div class="card" id="link03">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">合作活動</span>
+                        </h3>
+                        <ul class="tycg-card clearfix">
+                            <li>
+                                <a class="tycg-photo"
+                                    href="https://card.firstbank.com.tw/sites/Satellite?c=CreditCard&cid=1565695448783&d=Touch&pagename=FirstBankCard%2FCreditCard%2Fzh%2FCardActivityDetailView"
+                                    target="_blank">
+                                    <img src="images/other_event_01_0831.png" alt="第一銀行">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://open.tycard.app/fubon/20220801" target="_blank">
+                                    <img src="images/other_event_02.png" alt="台北富邦銀行">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://a18.taoyuanq.com/index.html?openExternalBrowser=1" target="_blank">
+                                    <img src="images/other_event_03.png" alt="國泰人壽">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
 
                     <div class="card">
