--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -60,7 +60,7 @@
                     <a class="go-section-01">最新消息</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-02">活動辦法</a>
+                    <a href="campaign.html">活動辦法</a>
                 </li>
                 <li class="pushy-link">
                     <a href="point.html">民眾專區</a>
@@ -98,7 +98,7 @@
                         <a>最新消息</a>
                     </li>
                     <li class="go-section-02">
-                        <a>活動辦法</a>
+                        <a href="campaign.html#link01">活動辦法</a>
                     </li>
                     <!-- go-section-03 -->
                     <li class="dropdown">
@@ -226,90 +226,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="card" id="goThe02">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">資科局加碼活動</span>
-                        </h3>
-                        <div>
-                            <a class="a-an" href="https://lihi3.com/BYXkv" target="_blank">
-                                <img class="pc-show" src="images/img-event-hot.jpg" width="100%" alt="紅利桃子 - 加碼活動">
-                                <img class="mob-show" src="images/img-event-hot-mob.jpg" width="100%" alt="紅利桃子 - 加碼活動">
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">桃園市各局處活動辦法</span>
-                        </h3>
-                        <ul class="tycg-card clearfix">
-                            <li>
-                                <a class="tycg-photo" href="https://lovetystay.tycg.gov.tw/" target="_blank">
-                                    <img src="images/img-event-01-0722.png" alt="觀旅局 - 旅宿千元住宿金 加碼1000點">
-                                </a>
-                            </li>
-                            <li>
-                                <a class="tycg-photo" href="https://agriculture.tycg.gov.tw/home.jsp?id=255&parentpath=0,103&mcustomize=multimessage_view.jsp&dataserno=202206270024&aplistdn=ou=hotnews,ou=chinese,ou=ap_root,o=tycg,c=tw&toolsflag=Y" target="_blank">
-                                    <img src="images/img-event-02-0701.png" alt="農業局 - 防疫有機蔬菜箱 加碼30點">
-                                </a>
-                            </li>
-                            <li>
-                                <a class="tycg-photo" href="https://2022lovetyn.tw/" target="_blank">
-                                    <img src="images/img-event-03-0714.png" alt="經發局 - 週週抽吃飯金 加碼300點">
-                                </a>
-                            </li>
-                            <li>
-                                <a class="tycg-photo" href="https://www.facebook.com/100064626644757/posts/pfbid02qRyiQU3aRUbGu68mA9r6GwiprwEHpZpuSxJ7P1Ez81ZroDhM5WYDAbVwySusoFfql/?d=n" target="_blank">
-                                    <img src="images/img-event-04.png" alt="經發局 - 逛夜市送100點">
-                                </a>
-                            </li>
-                            <li>
-                                <a class="tycg-photo"
-                                    href="https://www.2022taoyuanfood.com.tw/"
-                                    target="_blank">
-                                    <img src="images/img-event-05.png" alt="經發局 - 音樂 微醺 最高可獲300點">
-                                </a>
-                            </li>
-                            <li>
-                                <a class="tycg-photo" href="https://w3.ncet.com.tw/a2/Ty-airarea/news-page/19" target="_blank">
-                                    <img src="images/img-event-06.png" alt="經發局 - 綠色情人節 桃園騎趣 攜愛前行 贈紅利桃子 100點">
-                                </a>
-                            </li>
-                        </ul>
-                        <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
-                        ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。<br>
-                        ※ 當月結束之活動，點數領取期限為次月月底，請得獎者務必於領取期限前登入紅利桃子、完成點數領取，以免喪失個人權益。</p>
-                    </div>
-
-                    <div class="card">
-                        <h3 class="sub-title">
-                            <span class="bg-pink">合作活動</span>
-                        </h3>
-                        <ul class="tycg-card clearfix">
-                            <li>
-                                <a class="tycg-photo" href="https://card.firstbank.com.tw/sites/Satellite?c=CreditCard&cid=1565695448783&d=Touch&pagename=FirstBankCard%2FCreditCard%2Fzh%2FCardActivityDetailView" target="_blank">
-                                    <img src="images/other_event_01_0831.png" alt="第一銀行">
-                                </a>
-                            </li>
-                            <li>
-                                <a class="tycg-photo" href="https://open.tycard.app/fubon/20220801" target="_blank">
-                                    <img src="images/other_event_02.png" alt="台北富邦銀行">
-                                </a>
-                            </li>
-                            <li>
-                                <a class="tycg-photo" href="https://a18.taoyuanq.com/index.html?openExternalBrowser=1" target="_blank">
-                                    <img src="images/other_event_03.png" alt="國泰人壽">
-                                </a>
-                            </li>
-                            <!-- <li>
-                                <a class="tycg-photo">
-                                    <img src="images/other_event_comingsoon.png" alt="coming soon">
-                                </a>
-                            </li> -->
-                        </ul>
-                    </div>
-
                     <div class="card">
                         <h3 class="sub-title">
                             <span class="bg-pink">紅利桃子可以去哪消費？</span>
