--- a/iiot/peach/privacy.html
+++ b/iiot/peach/privacy.html
@@ -52,13 +52,19 @@
         <div class="pushy-content">
             <ul>
                 <li class="pushy-link">
-                    <a class="go-section-01">最新消息</a>
+                    <a href="index.html">回首頁</a>
                 </li>
                 <li class="pushy-link">
-                    <a class="go-section-02">活動辦法</a>
+                    <a href="index.html#goThe01">最新消息</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="campaign.html">活動辦法</a>
                 </li>
                 <li class="pushy-link">
                     <a href="point.html">民眾專區</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="https://lihi3.com/BYXkv" target="_blank">前往紅利桃子</a>
                 </li>
                 <li class="pushy-link">
                     <a href="business.html">業者專區</a>
