紅利桃子 - 新增活動BN

--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -179,6 +179,11 @@
                                     <img src="images/img-event-06.png" alt="經發局 - 綠色情人節 桃園騎趣 攜愛前行 贈紅利桃子 100點">
                                 </a>
                             </li>
+                            <li>
+                                <a class="tycg-photo" href="https://portal.typoint.tw/articles/43" target="_blank">
+                                    <img src="images/img-event-07.png" alt="文化局 - 桃園2022 地景藝術節 藝起集章換好禮">
+                                </a>
+                            </li>
                         </ul>
                         <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
                             ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。<br>
