桃園市民卡 - 註冊頁面調整 checkbox 顯示style

--- a/iiot/taoyuang1000/join-tycg/register-dark.html
+++ b/iiot/taoyuang1000/join-tycg/register-dark.html
@@ -116,7 +116,12 @@
                         </div>
                     </fieldset>
                 </form>
-                <p class="text-confirm link">按一下註冊按鈕，即表示您確認已詳閱<br><a href="#">隱私權政策</a>，並且同意<a href="#">使用條款</a></p>
+                <div class="option-list">
+                    <input type="checkbox" name="payment1" value="已詳閱">
+                    <label for="option">按一下註冊按鈕，即表示<br>
+                        您確認已詳閱<a href="#">隱私權政策</a>，並且同意<a href="#">使用條款</a>。</label>
+                </div>
+                <!-- <p class="text-confirm link">按一下註冊按鈕，即表示您確認已詳閱<br><a href="#">隱私權政策</a>，並且同意<a href="#">使用條款</a></p> -->
                 <div class="both-btn">
                     <button class="btn-default btn-white">略過</button>
                     <button class="btn-default btn-disabled">完成註冊</button>
