--- a/iiot/taoyuang1000/join-tycg/register.html
+++ b/iiot/taoyuang1000/join-tycg/register.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!--  main  -->
-        <main class="landing for-register for-dark">
+        <main class="landing for-register"><!-- for-dark -->
             <section class="contents-box">
                 <h1 class="maintitle"><a class="return" href="#"></a>註冊</h1>
                 <form class="edit-userinfo">
@@ -119,9 +119,10 @@
                 </form>
                 <div class="option-list">
                     <input type="checkbox" name="payment1" value="已詳閱">
-                    <label for="option">確認已詳閱，即表示您同意我們的<a>隱私權政策</a>與<a>使用條款</a>。</label>
+                    <label for="option">按一下註冊按鈕，即表示<br>
+                        您確認已詳閱<a href="#">隱私權政策</a>，並且同意<a href="#">使用條款</a>。</label>
                 </div>
-                <p class="text-confirm link"><a href="#">隱私權政策</a> | <a href="#">使用條款</a></p>
+                <!-- <p class="text-confirm link"><a href="#">隱私權政策</a> | <a href="#">使用條款</a></p> -->
                 <div class="both-btn">
                     <button class="btn-default btn-white">略過</button>
                     <button class="btn-default btn-disabled">完成註冊</button>
