桃憩一夏-集章扭好運-更新印章樣式

--- a/iiot/taoyuang1000/collect/index.html
+++ b/iiot/taoyuang1000/collect/index.html
@@ -24,20 +24,20 @@
                 <img src="images/step01-03.png" alt="如何集章?">
                 <div class="seal-content clearfix">
                     <div class="the-seal">
-                        <img class="ok" src="images/seal-01.png">
-                        <img src="images/bg_seal-01.png">
+                        <img class="ok" src="images/seal-done.png">
+                        <img src="images/bg_seal-01-0920.png">
                     </div>
                     <div class="the-seal">
-                        <img class="ok" src="images/seal-02.png">
-                        <img src="images/bg_seal-02.png">
+                        <img class="ok" src="images/seal-done.png">
+                        <img src="images/bg_seal-02-0920.png">
                     </div>
                     <div class="the-seal">
-                        <img class="ok" src="images/seal-03.png">
-                        <img src="images/bg_seal-03.png">
+                        <img class="ok" src="images/seal-done.png">
+                        <img src="images/bg_seal-03-0920.png">
                     </div>
                     <div class="the-seal">
-                        <!-- <img class="ok" src="images/seal-04.png"> -->
-                        <img src="images/bg_seal-04.png">
+                        <!-- <img class="ok" src="images/seal-done.png"> -->
+                        <img src="images/bg_seal-04-0920.png">
                     </div>
                     <div class="the-00">
                         <img src="images/seal-00.png">
