--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -64,7 +64,7 @@
                     <a href="index.html#goThe01">最新消息</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="campaign.html">活動辦法</a>
+                    <a href="campaign.html">最新點數活動</a>
                 </li>
                 <li class="pushy-link">
                     <a href="point.html">民眾專區</a>
@@ -99,7 +99,7 @@
             <nav class="nav-menu">
                 <ul>
                     <li class="dropdown">
-                        <a class="title">活動辦法</a>
+                        <a class="title">最新點數活動</a>
                         <ul class="sub-menu">
                             <li>
                                 <a href="campaign.html#link01">資科局加碼活動</a>
@@ -139,7 +139,14 @@
                             </a>
                         </div>
                     </div>
-                    
+                    <!-- <div class="card">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">桃憩一下</span>
+                        </h3>
+                        <div>
+
+                        </div>
+                    </div> -->
                     <div class="card" id="link02">
                         <h3 class="sub-title">
                             <span class="bg-pink">桃園市各局處活動辦法</span>
@@ -189,6 +196,11 @@
                                     <img src="images/img-event-08.png" alt="桃園捷運 - 通勤有禮抽 紅利桃子 100點">
                                 </a>
                             </li>
+                            <li>
+                                <a class="tycg-photo" href="https://portal.typoint.tw/articles/48" target="_blank">
+                                    <img src="images/img-event-09.png" alt="文化局 - 2022 地景藝術節 反應熱烈再加碼 現場報到拿 50點">
+                                </a>
+                            </li>
                         </ul>
                         <p class="text-remark">※ 以上活動辦法依各局處活動官網為準。<br>
                             ※ 各局處活動得獎者公布後，隔週三進行點數發放，註冊登入紅利桃子後即可查詢點數資訊。<br>
@@ -215,6 +227,11 @@
                             <li>
                                 <a class="tycg-photo" href="https://a18.taoyuanq.com/index.html?openExternalBrowser=1" target="_blank">
                                     <img src="images/other_event_03.png" alt="國泰人壽">
+                                </a>
+                            </li>
+                            <li>
+                                <a class="tycg-photo" href="https://portal.typoint.tw/questions" target="_blank">
+                                    <img src="images/other_event_04.png" alt="台北富邦銀行">
                                 </a>
                             </li>
                         </ul>
