--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -60,7 +60,7 @@
                     <a class="go-section-01">最新消息</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="campaign.html">活動辦法</a>
+                    <a href="campaign.html">最新點數活動</a>
                 </li>
                 <li class="pushy-link">
                     <a href="point.html">民眾專區</a>
@@ -98,7 +98,7 @@
                         <a>最新消息</a>
                     </li>
                     <li class="go-section-02">
-                        <a href="campaign.html#link01">活動辦法</a>
+                        <a href="campaign.html#link01">最新點數活動</a>
                     </li>
                     <!-- go-section-03 -->
                     <li class="dropdown">
