--- a/iiot/peach/faq.html
+++ b/iiot/peach/faq.html
@@ -64,7 +64,7 @@
                     <a href="index.html#goThe01">最新消息</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="campaign.html">活動辦法</a>
+                    <a href="campaign.html">最新點數活動</a>
                 </li>
                 <li class="pushy-link">
                     <a href="point.html">民眾專區</a>
