紅利桃子 - 更新活動內容 - 新增"桃憩一下EDM"

--- a/iiot/peach/campaign.html
+++ b/iiot/peach/campaign.html
@@ -139,14 +139,17 @@
                             </a>
                         </div>
                     </div>
-                    <!-- <div class="card">
+                    <div class="card">
                         <h3 class="sub-title">
                             <span class="bg-pink">桃憩一下</span>
                         </h3>
                         <div>
-
+                            <a class="a-an" href="https://portal.typoint.tw/home" target="_blank">
+                                <img class="pc-show" src="images/edm_01.jpg" width="100%" alt="桃憩一下">
+                                <img class="mob-show" src="images/edm_01-mob.jpg" width="100%" alt="桃憩一下">
+                            </a>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="card" id="link02">
                         <h3 class="sub-title">
                             <span class="bg-pink">桃園市各局處活動辦法</span>
