--- a/iiot/peach/index.html
+++ b/iiot/peach/index.html
@@ -176,8 +176,14 @@
                             </div>
                         </div>
                     </div>
-                    
-
+                    <div class="card">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">全民搶點 - 各項點數任務與活動</span>
+                        </h3>
+                        <a class="store-event a-an" href="campaign.html">
+                            <img src="images/btn_event_more.png" width="100%" alt="立即點我查看各項點數活動">
+                        </a>
+                    </div>
                     <div class="card" id="goThe03">
                         <h3 class="sub-title">
                             <span class="bg-pink">全民攻略 - 紅利桃子是什麼？</span>
