桃憩一夏-調整中獎序號為百分比

--- a/iiot/taoyuang1000/collect/number_user.html
+++ b/iiot/taoyuang1000/collect/number_user.html
@@ -30,7 +30,7 @@
                         <p class="nb">5572</p>
                         <p class="nb">854</p>
                         <p class="nb">254</p>
-                    <div
+                    <div>
                 </div>
             </div>
         </section>        
