桃憩一夏-新增點選抽獎按鈕頁

--- a/iiot/taoyuang1000/collect/number.html
+++ b/iiot/taoyuang1000/collect/number.html
@@ -18,7 +18,7 @@
             <div class="event-content-top">
                 <img class="t1" src="images/title-01.png" alt="桃憩一夏 紅利桃子點數體驗市集">
                 <img class="t2" src="images/subtitle-01.png" alt="集章扭好運">
-                <img src="images/event-title-02.png" alt="消費抽好禮規則">
+                <img src="images/event-title-02-0923.png" alt="消費抽好禮規則">
             </div>
             <div class="event-content">
                 <div class="t-date">
