桃憩一夏-調整按鈕抽獎畫面

--- a/iiot/taoyuang1000/collect/number_user.html
+++ b/iiot/taoyuang1000/collect/number_user.html
@@ -20,17 +20,22 @@
                 <img class="t3 img-mob" src="images/bg_nb_title_s.png" alt="桃憩一夏 消費回饋抽好禮">
             </div>
             <div class="nb-border">
+                <div class="btn-info">
+                    <input class="btn-go" type="button" value="開始抽獎">
+                </div>
                 <div class="t-date">
                     <img src="images/bg_nb_subtitle.png" alt="中獎序號">
                 </div>
                 <div class="nb-content clearfix">
-                    <div>
+                    <div id="winners">
+                        <p class="nb-r">第一場 <span>點數1,000點</span> 共 <span>5</span> 名</p><br>
                         <p class="nb">1000</p>
                         <p class="nb">5555</p>
                         <p class="nb">5572</p>
                         <p class="nb">854</p>
                         <p class="nb">254</p>
-                    <div>
+                    </div>
+                    
                 </div>
             </div>
         </section>        
