桃憩一夏 - 調整細節更新圖片與新增內部看序號列表
1.更新圖片上的日期
2.新增內部看序號列表

--- a/iiot/taoyuang1000/collect/number.html
+++ b/iiot/taoyuang1000/collect/number.html
@@ -17,7 +17,7 @@
         <section class="middle-container">
             <div class="event-content-top">
                 <img class="t1" src="images/title-01.png" alt="桃憩一夏 紅利桃子點數體驗市集">
-                <img class="t2" src="images/subtitle-01.png" alt="集章扭好運">
+                <img class="t4" src="images/subtitle-02.png" alt="消費回饋抽好康">
                 <img src="images/event-title-02-0923.png" alt="消費抽好禮規則">
             </div>
             <div class="event-content">
@@ -25,6 +25,12 @@
                     <img src="images/info-title-s-0924.png" alt="9/24 抽獎序號">
                 </div>
                 <ul class="nb-content clearfix">
+                    <li class="w100">  
+                        <div class="nb">
+                            <p>未取得任何抽獎序號，請再努力去消費哦！<br>
+                        <span class="f-c-red">**抽獎序號每五分鐘會更新一次，如果任何問題請洽紅利桃子服務台。</span></p>
+                        </div>
+                    </li>
                     <li>
                         <div class="nb">
                             <p>1</p>
@@ -91,7 +97,7 @@
                         </div>
                     </li>
                 </ul>
-                <img src="images/info-02.png">
+                <img src="images/info-02-0923.png">
             </div>
         </section>        
     </main>
